[package]
name = "lsp-tarpaulin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }

lsp-server = "0.7.6"
lsp-types = "0.95.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

crossbeam-channel = "0.5.11"

cargo_toml = "0.19.1"

thiserror = "1.0"
url = "2.5.0"
