[package]
name = "tarballin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }

lsp-server = "0.7.6"
lsp-types = "0.95.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

crossbeam-channel = "0.5.11"

cargo_toml = "0.19.1"

thiserror = "1.0"
eyre = "0.6.12"
url = "2.5.0"

tempdir = "0.3.7"

glob = "0.3.1"

tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
